--- a/index.html
+++ b/index.html
@@ -3,35 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PodAI</title> 
-<body>
-    <nav class="navbar" aria-label="Main navigation"> 
-        <div class="navbar-container">
-            <a href="index.html" class="navbar-brand">PodAI</a>
-            <ul class="navbar-menu">
-                <li class="navbar-item">
-                    <a href="quizzes.html" class="navbar-link">Quizzes</a>
-                </li>
-                <li class="navbar-item">
-                    <a href="leaderboard.html" class="navbar-link">Leaderboard</a>
-                </li>
-                <li class="navbar-item">
-                  <a href="profile.html" class="navbar-link">Profile</a>
-                </li>
-                <li class="navbar-item">
-                  <a href="about.html" class="navbar-link">About Us</a>
-                </li>
-                <li class="navbar-item">
-                  <a href="contact.html" class="navbar-link">Contact</a>
-                </li>
-                <li class="navbar-item">
-        <a href="login.html" class="navbar-link">Login</a>
-                </li>
-                <li class="navbar-item">
-                  <a href="signup.html" class="navbar-link">Sign Up</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <title>AI Quiz Maker</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
+</head>
+<body class="bg-gradient-to-br from-purple-100 to-indigo-200 min-h-screen">
+    <div id="root"></div>
+    <script type="module" src="../src/index.js"></script>
 </body>
 </html>
